--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "detect-circular-dependencies": "npx dpdm --circular src/index.tsx",
         "audit-accessibility": "node .github/actions/audit-accessibility/main.js",
         "circular-dependencies": "yarn dpdm src/index.tsx --tree=false --warning=false --exit-code circular:1",
-        "prepare": "husky install",
+        "prepare": "npm run build && husky install",
         "edit-playroom-patch": "playroom/patch-playroom.sh"
     },
     "browserslist": [
